src/snapshots/tseeley__build__tests__public__404.html.snap
---
source: src/build.rs
expression: content
---
<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" content="#111111"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><title>404 - Test Site</title><meta name="description" content="Page not found."><meta name="author" content="Test Author"><link rel="canonical" href="https://example.com/404.html"><link href="/css/styles.css" rel="stylesheet"><link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Test Author"><link rel="me" href="https://github.com/test"><meta property="og:title" content="404 - Test Site"><meta property="og:description" content="Page not found."><meta property="og:image" content="https://example.com/og.png"><meta property="og:url" content="https://example.com/404.html"><meta property="og:type" content="website"><meta property="og:site_name" content="Test Site"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:site" content="@test"><meta name="twitter:creator" content="@test"><meta name="twitter:title" content="404 - Test Site"><meta name="twitter:description" content="Page not found."><meta name="twitter:image" content="https://example.com/og.png"></head><body><nav><a href="/"><strong>Test Site</strong></a><span class="nav-sep"></span><a href="/posts/">Posts</a><a href="/about/">About</a></nav><main><h2 class="title">Oops, this page doesn't exist.</h2></main><footer><ul class="footer-links"><li><a href="/blogroll/">Blogroll</a></li><li><a href="/meta/">Meta</a></li><li><a href="/bookmarks/">Bookmarks</a></li><li><a href="/tags/">Tags</a></li><li><a href="/atom.xml">Feed</a></li></ul><a class="h-card" href="https://example.com" rel="me">Test Author</a> <span class="symbol">&copy;</span> [YEAR] — <a target="_blank" href="https://example.com/license">Test License</a></footer><script>
    new EventSource("/__live").onmessage = () => location.reload();
</script></body></html>
