src/snapshots/tseeley__build__tests__public__atom.xml.snap
---
source: src/build.rs
expression: content
---
<?xml version="1.0"?>
<feed xmlns="http://www.w3.org/[YEAR]/Atom"><title>Test Site</title><id>https://example.com/atom.xml</id><updated>[DATE]T00:00:00+00:00</updated><generator>test-ssg</generator><link href="https://example.com/atom.xml" rel="self" type="application/atom+xml"/><link href="https://example.com" rel="alternate" type="text/html"/><subtitle>A test description.</subtitle><entry><title>World</title><id>https://example.com/posts/world/</id><updated>[DATE]T00:00:00+00:00</updated><author><name>Test Author</name></author><link href="https://example.com/posts/world/" rel="alternate" type="text/html"/><published>[DATE]T00:00:00+00:00</published><content type="html">
&lt;p&gt;Second post with a footnote&lt;a id=&quot;fnref1&quot; href=&quot;#fn1&quot; role=&quot;doc-noteref&quot;&gt;&lt;sup&gt;1&lt;/sup&gt;&lt;/a&gt;.&lt;/p&gt;
&lt;section role=&quot;doc-endnotes&quot;&gt;
&lt;hr&gt;
&lt;ol&gt;
&lt;li id=&quot;fn1&quot;&gt;
&lt;p&gt;This is the footnote.&lt;a href=&quot;#fnref1&quot; role=&quot;doc-backlink&quot;&gt;↩︎&lt;/a&gt;&lt;/p&gt;
&lt;/li&gt;
&lt;/ol&gt;
&lt;/section&gt;

&lt;hr&gt;
&lt;p&gt;&lt;code&gt;rust&lt;/code&gt;&lt;/p&gt;
&lt;p&gt;&lt;a href=&quot;https://example.com/about/&quot;&gt;Test Author&lt;/a&gt;&lt;/p&gt;
&lt;p&gt;&lt;a href=&quot;https://mastodon.example.com/@test&quot;&gt;@test on Mastodon&lt;/a&gt;&lt;/p&gt;
&lt;p&gt;&lt;a href=&quot;https://example.com/posts/hello/&quot;&gt;Hello&lt;/a&gt; &amp;rarr;&lt;/p&gt;
</content></entry><entry><title>Hello</title><id>https://example.com/posts/hello/</id><updated>[DATE]T00:00:00+00:00</updated><author><name>Test Author</name></author><link href="https://example.com/posts/hello/" rel="alternate" type="text/html"/><published>[DATE]T00:00:00+00:00</published><content type="html">
&lt;p&gt;First post with inline &lt;code&gt;code&lt;/code&gt; and a code block.&lt;/p&gt;
&lt;section id=&quot;A-section&quot;&gt;
&lt;h2&gt;&lt;a class=&quot;heading-anchor&quot; href=&quot;#A-section&quot;&gt;A section&lt;/a&gt;&lt;/h2&gt;
&lt;pre&gt;&lt;code data-lang=&quot;rust&quot;&gt;&lt;span style=&quot;color:#888888;&quot;&gt;fn &lt;/span&gt;&lt;span style=&quot;font-weight:bold;color:#eeeeee;&quot;&gt;main&lt;/span&gt;&lt;span style=&quot;color:#888888;&quot;&gt;() {
&lt;/span&gt;&lt;span style=&quot;color:#e2e2e5;&quot;&gt;    println!&lt;/span&gt;&lt;span style=&quot;color:#888888;&quot;&gt;(&amp;quot;&lt;/span&gt;&lt;span style=&quot;font-style:italic;color:#daa520;&quot;&gt;hello&lt;/span&gt;&lt;span style=&quot;color:#888888;&quot;&gt;&amp;quot;);
&lt;/span&gt;&lt;span style=&quot;color:#888888;&quot;&gt;}
&lt;/span&gt;&lt;/code&gt;&lt;/pre&gt;
&lt;p&gt;A &lt;a href=&quot;/about/&quot;&gt;local link&lt;/a&gt; and an &lt;a href=&quot;https://example.com&quot;&gt;external link&lt;/a&gt;.&lt;/p&gt;
&lt;/section&gt;

&lt;hr&gt;
&lt;p&gt;&lt;code&gt;rust&lt;/code&gt; &lt;code&gt;ssg&lt;/code&gt;&lt;/p&gt;
&lt;p&gt;&lt;a href=&quot;https://example.com/about/&quot;&gt;Test Author&lt;/a&gt;&lt;/p&gt;
&lt;p&gt;&lt;a href=&quot;https://mastodon.example.com/@test&quot;&gt;@test on Mastodon&lt;/a&gt;&lt;/p&gt;
&lt;p&gt;&amp;larr; &lt;a href=&quot;https://example.com/posts/world/&quot;&gt;World&lt;/a&gt;&lt;/p&gt;
</content></entry></feed>
