src/snapshots/tseeley__build__tests__public__index.html.snap
---
source: src/build.rs
expression: content
---
<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" content="#111111"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><title>Test Site</title><meta name="description" content="A test description."><meta name="author" content="Test Author"><link rel="canonical" href="https://example.com/"><link href="/css/styles.css" rel="stylesheet"><link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Test Author"><link rel="me" href="https://github.com/test"><meta property="og:title" content="Test Site"><meta property="og:description" content="A test description."><meta property="og:image" content="https://example.com/og.png"><meta property="og:url" content="https://example.com/"><meta property="og:type" content="website"><meta property="og:site_name" content="Test Site"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:site" content="@test"><meta name="twitter:creator" content="@test"><meta name="twitter:title" content="Test Site"><meta name="twitter:description" content="A test description."><meta name="twitter:image" content="https://example.com/og.png"></head><body><nav><a href="/"><strong>Test Site</strong></a><span class="nav-sep"></span><a href="/posts/">Posts</a><a href="/about/">About</a></nav><main><section class="intro"><p>Hi, I'm <a class="person thomas" href="/about/">Thomas</a>, and this is my <a href="https://indieweb.org/blog">weblog</a>. I write about software and making things.</p><p>You can browse my posts by <a href="/tags/">tags</a>, check out my <a href="/blogroll/">blogroll</a>, see what I'm <a href="https://bookmarks.example.com">bookmarking</a>, or subscribe to my <a href="/atom.xml">posts feed</a>.</p><div class="h-card" hidden><a class="p-name u-url" href="https://example.com" rel="me">Test Author</a><img class="u-photo" src="/profile.jpg" alt="Test Author"><p class="p-note">I write about software and making things</p></div></section><section class="h-feed" aria-labelledby="posts-heading"><h2 class="title p-name" id="posts-heading">Recent Posts</h2><ul class="list"><li class="h-entry"><a class="p-name u-url" href="/posts/world/">World</a> <time class="dt-published" datetime="[DATE]">Feb 1, [YEAR]</time></li><li class="h-entry"><a class="p-name u-url" href="/posts/hello/">Hello</a> <time class="dt-published" datetime="[DATE]">Jan 15, [YEAR]</time></li></ul><p><a href="/posts/">View all</a></p></section></main><footer><ul class="footer-links"><li><a href="/blogroll/">Blogroll</a></li><li><a href="/meta/">Meta</a></li><li><a href="/bookmarks/">Bookmarks</a></li><li><a href="/tags/">Tags</a></li><li><a href="/atom.xml">Feed</a></li></ul><a class="h-card" href="https://example.com" rel="me">Test Author</a> <span class="symbol">&copy;</span> [YEAR] — <a target="_blank" href="https://example.com/license">Test License</a></footer><script>
    new EventSource("/__live").onmessage = () => location.reload();
</script></body></html>
