src/snapshots/tseeley__build__tests__public__robots.txt.snap
---
source: src/build.rs
expression: content
---
User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml
