src/snapshots/tseeley__build__tests__public__sitemap.xml.snap
---
source: src/build.rs
expression: content
---
<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url><loc>https://example.com/</loc><lastmod>[DATE]</lastmod></url>
  <url><loc>https://example.com/posts/</loc><lastmod>[DATE]</lastmod></url>
  <url><loc>https://example.com/tags/</loc><lastmod>[DATE]</lastmod></url>
  <url><loc>https://example.com/posts/world/</loc><lastmod>[DATE]</lastmod></url>
  <url><loc>https://example.com/posts/hello/</loc><lastmod>[DATE]</lastmod></url>
  <url><loc>https://example.com/about/</loc><lastmod>[DATE]</lastmod></url>
  <url><loc>https://example.com/blogroll/</loc><lastmod>[DATE]</lastmod></url>
  <url><loc>https://example.com/tags/rust/</loc><lastmod>[DATE]</lastmod></url>
  <url><loc>https://example.com/tags/ssg/</loc><lastmod>[DATE]</lastmod></url>
</urlset>
